css cards aligned fix, app ready

--- a/src/index.css
+++ b/src/index.css
@@ -88,28 +88,32 @@ img {
 }
 
 #card {
-  grid-template-rows: max-content 200px 1fr;
+  grid-template-rows: max-content 200px;
   height: 200px;
-  display: inline-block;
-  box-sizing: border-box;
-  width:auto;
+  display: block;
+  float: left;
+  box-sizing:inherit;
+  width: 700px;;
   align-content: auto;
   border: solid #5B6DCD 10px;
   padding: 5px;
-  height: fit-content;
- 
+  height: 400px;
+  
 }
 
 #course-list {
   background-color: rgb(247, 250, 251);
 
 }
+
+#courses {
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 #logo{
   background-color: rgb(54, 170, 238);
   font-size: 2.2em;
-  
- 
- 
 }
 
 #home {
